--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,7 @@ body {
     gap: 10px;
     display: flex;
     border: 2px solid #00c65d;
+    background-color: transparent;
     width: 250px;
     text-align: center;
     border-radius: 5px;
@@ -95,7 +96,8 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     text-decoration: none;
-    
+    transition: width .3s, background-color .3s;
+
 }
 
 .apresentacao__links__google:hover{
@@ -105,6 +107,8 @@ body {
     margin-top: 1px;
     margin-bottom: 1px;
 }
+
+
 
 
 .apresentacao__links__imagem{
