--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,7 @@ body {
     gap: 10px;
     display: flex;
     border: 2px solid #00c65d;
-    background-color: transparent;
+    background-color: #00000077;
     width: 250px;
     text-align: center;
     border-radius: 5px;
