--- a/styles/login.css
+++ b/styles/login.css
@@ -2,6 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Krona+One&family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root{
+    --cor-texto-primaria: #ffffff;
+    --cor-texto-secundaria: #00c65d;
+    --cor-texto-terciaria: #00c65dbb;
+    --cor-background: #000;
+}
 * {
     margin: 0;
     padding: 0;
@@ -10,42 +16,55 @@
 
 
 body {
-    background-color: rgb(0, 0, 0);
-    background-image: url(/assets/background.jpg);
-    background-repeat: no-repeat;
+    
+    background-image: linear-gradient(to bottom, #def8ff, #a9d8dc, #75b8b4, #479888, #1f7858); background-repeat: no-repeat;
     background-size:  cover;
-    color: #ffffff;
+    color: var(--cor-background);
 }
 
 .cabecalho{
     padding: 1% 0% 1% 0%;
-    background-color: #00c65dbb;
-    border-bottom: 1px solid #ffffff;
 }
 
 .cabecalho__menu{
     display: flex;
-    gap: 80px;
-    justify-content: space-around;
+    padding-left: 1%;
+    justify-content: start;
 }
 
-.cabecalho__menu_link{
+.cabecalho__menu__link{
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     font-size: 24px;
-    color: #ffffff;
+    color: var(--cor-background);
     text-decoration: none;
+    display: flex;
+    padding-left: 1%;
+    justify-content: start;
+}
+
+.login__geral{
+    display: flex;
+    justify-content: center;
+    
+}
+
+.login__geral__imagem{
+    background-image: url(/assets/93z_2206_w009_n001_145b_p14_145.jpg);
+    background-size: cover;
+    padding-right: 40%;
 }
 
 .login{
+    flex-grow: 1;
     padding: 4% 2%;
     display: flex;
     align-items: start;
     flex-direction: column;
-    margin: 10% 35%;
-    border: 2px solid #ffffff;
+    margin: 5% 12% 12%;
+    /* border: 2px solid var(--cor-texto-primaria);
     border-radius: 20px;
-    background-color: #00000077;
+    background-color: #00000077; */
 }
 
 .login__container{
@@ -69,7 +88,7 @@ body {
    border-radius: 5px;
 }
 .login__container__text:focus{
-    outline-color: #00c65d;
+    outline-color: var(--cor-texto-secundaria);
 }
 
 .login__container__separador{
@@ -86,7 +105,7 @@ body {
 
 .login__container__botao{
     padding: 7px 0px;
-    border: 2px solid #ffffff;
+    border: 2px solid var(--cor-texto-primaria);
     border-radius: 7px;
     font-family: 'Krona One', sans-serif;
     font-weight: 400;
@@ -94,12 +113,12 @@ body {
 }
 
 .login__container__botao:hover{
-    background-color: #00c65d;
+    background-color: var(--cor-texto-secundaria);
     cursor: pointer;
 }
 
 .login__container__recuperarSenha{
     font-size: 12px;
     text-decoration: underline;
-    color: #ffffff;
+    color: var(--cor-background);
 }
