--- a/styles/style.css
+++ b/styles/style.css
@@ -116,6 +116,13 @@ body {
     margin-bottom: 1px;
 }
 
+.botao__alarme{
+    background-color: #00c65d;
+    height: 23px;
+    width: 280px;
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
 
 
 
