--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ body {
 .cabecalho__menu_link{
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: var(--cor-branco-solido);
     text-decoration: none;
 }
@@ -50,11 +50,12 @@ body {
     padding: 5%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    gap: 82px;
 }
 
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -63,7 +64,7 @@ body {
 
 .apresentacao__conteudo__titulo {
     font-family: 'Krona One', sans-serif;
-    font-size: 36px;
+    font-size: 2.25rem;
 }
 
 .destaque_titulo {
@@ -72,7 +73,7 @@ body {
 
 .apresentacao__conteudo__texto {
     font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__links{
@@ -86,19 +87,19 @@ body {
 .apresentacao__links__subtitulo{
     font-family: 'Krona One', sans-serif;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
-.apresentacao__links__google{
+.apresentacao__links__navegacao{
     justify-content: center;
     gap: 10px;
     display: flex;
     border: 2px solid var(--cor-verde-solido);
     background-color: var(--cor-preto-solido);
-    width: 250px;
+    width: 40%;
     text-align: center;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 1.25rem;
     padding: 10px 0;
     color: var(--cor-branco-solido);
     font-family: 'Montserrat', sans-serif;
@@ -108,10 +109,10 @@ body {
 
 }
 
-.apresentacao__links__google:hover{
+.apresentacao__links__navegacao:hover{
     background-color: var(--cor-verde-solido);
     height: 23px;
-    width: 280px;
+    width: 50%;
     margin-top: 1px;
     margin-bottom: 1px;
 }
@@ -126,7 +127,7 @@ body {
 .apresentacao__imagem{
     margin: 10px;
     border-radius: 12px;
-    width: 500px;
+    width: 40%;
 }
 
 
@@ -139,3 +140,20 @@ body {
     font-weight: 400;
 }
 
+
+
+@media (max-width: 1100px){
+    .apresentacao{
+        flex-direction: column-reverse;
+        padding: 5% 3%;
+    }
+
+    .apresentacao__conteudo{
+        width: auto;
+        text-align: center;
+    }
+
+    .apresentacao__imagem{
+        width: 60%;
+    }
+}
