--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@ body {
     text-align: center;
     border-radius: 5px;
     font-size: 125%;
-    padding: 10px 0;
+    padding: 10px 2%;
     color: var(--cor-branco-solido);
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
