--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
     --cor-verde-solido: #00c65d;
     --cor-verde-transparente: #00c65dbb;
     --cor-preto-solido: #000;
+    --cor-preto-transparente: #00000077;
 }
 
 
@@ -71,6 +72,25 @@ body {
     font-size: 2.25rem;
 }
 
+.apresentacao__conteudo__titulo__contato{
+    font-family: 'Krona One', sans-serif;
+    font-size: 2.0rem;
+}
+
+.apresentacao__conteudo__contato{
+    display: flex;
+    align-items: center;
+    gap: 2%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+    text-decoration: none;
+    color: var(--cor-branco-solido);
+}
+
+.apresentacao__conteudo__contato img{
+    width: 32px;
+}
+
 .destaque_titulo {
     color: var(--cor-verde-solido);
 }
@@ -132,6 +152,102 @@ body {
     margin: 1%;
     border-radius: 12px;
     width: 40%;
+}
+
+
+.planos__caixas{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #ffffff;
+    width: 30%;
+    font-family: 'Krona One', sans-serif;
+    height: 85vh;
+    background-color: var(--cor-preto-transparente);
+    border-radius: 15px;
+}
+
+.planos__caixas__default{
+    height: 95vh;
+} 
+
+.planos__caixas__titulo{
+    text-align: center;
+    margin: 8% 8% 2% 8%;
+}
+
+.planos__caixas__conteudo{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    
+}
+
+.planos__caixas__conteudo__infos{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 10%;
+    margin-bottom: 20%;
+    
+}
+
+.planos__caixas__conteudo__botoes{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+.planos__caixas__conteudo__botoes__botao{
+    justify-content: center;
+    gap: 10px;
+    display: flex;
+    border: 2px solid var(--cor-verde-solido);
+    background-color: var(--cor-preto-solido);
+    width: 60%;
+    text-align: center;
+    border-radius: 5px;
+    font-size: 125%;
+    padding: 10px 2%;
+    color: var(--cor-branco-solido);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    text-decoration: none;
+    transition: width .3s, background-color .3s;
+    height: 25px;
+    
+}
+
+.planos__caixas__conteudo__botoes__botao:hover{
+    background-color: var(--cor-verde-solido);
+    height: 23px;
+    width: 70%;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    
+}
+
+.planos__caixas__hr{
+    align-self: center;
+    width: 85%;
+}
+
+.planos__caixas__lista{
+    display: flex;
+    flex-direction: column;
+    padding: 10%;
+    gap: 6px;
+}
+
+.planos__caixas__lista__listas{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 
